# BertNado

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh  setup.py  sitemap.xml
.github/workflows/: build-container.yml  deploy-docs.yml  docs.yml  lint.yml  pypi.yml  python-tests.yml  test.yml
api/: index.html
bertnado/: _version.py  api.py  cli.py
bertnado.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bertnado/bertnado.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bertnado/data/: prepare_dataset.py
bertnado/evaluation/: feature_extraction.py  predict.py
bertnado/training/: finetune.py  full_train.py  metrics.py  model.py  optimization.py  sweep.py  trainers.py
cli/: index.html
data/: index.html
docs/: api.md  cli.md  conf.py  data.md  feature.md  index.md  index.rst  modules.rst  predict.md  requirements.txt  sweep.md  train.md  workflow.md
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/bertnado/data/: prepare_dataset.html
docs/_build/_modules/bertnado/evaluation/: feature_extraction.html  predict.html
docs/_build/_modules/bertnado/training/: full_train.html  sweep.html
docs/_build/_sources/: index.rst.txt  modules.rst.txt
docs/_static/: custom.css
docs/stylesheets/: extra.css
feature/: index.html
predict/: index.html
search/: search_index.json
sweep/: index.html
test/: mock_data.parquet  mock_dataset.py  mock_fasta.py  mock_genome.fasta  mock_genome.fasta.fai  test_cli.py  test_full_train.py  test_predict.py  test_prepare_dataset.py  test_sweep.py  test_trainers.py
test/data/: mock_data.parquet  mock_genome.fasta  mock_sweep_config.json
tests/: mock_dataset.py  mock_fasta.py  test_cli.py  test_predict.py  test_sweep.py  test_training_args.py
train/: index.html
workflow/: index.html
