[build-system]
requires = [
    "setuptools >= 80.3.1",
    "wheel",
    "setuptools_scm[toml]>=8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "bertnado"
authors = [
    {name = "Catherine Chahrour", email = "catherine.chahrour@msdtc.ox.ac.uk"}]
description = "BertNado: A framework for training and evaluating transformer-based models for Chromatin binding"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dynamic = ["version"]

dependencies = [
    "anndata==0.11.4",
    "captum==0.9.0",
    "click==8.1.8",
    "crested==1.4.1",
    "datasets==3.6.0",
    "loguru==0.7.3",
    "matplotlib==3.10.9",
    "modisco-lite==2.3.2",
    "pandas==2.3.3",
    "peft==0.15.1",
    "numpy >= 2",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "shap==0.51.0",
    "torch==2.11.0",
    "transformers==5.8.0",
    "wandb==0.26.1"
]

[project.optional-dependencies]
dev = [
    "mkdocs-material==9.7.4",
    "mkdocs>=1.6,<2.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocstrings-python==2.0.3",
    "mkdocstrings==1.0.3",
    "pymdown-extensions==10.21",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist>=3.0",
    "ruff==0.15.4",
]

[project.scripts]
bertnado = "bertnado.cli:cli"
bertnado-data = "bertnado.cli:prepare_data_cli"
bertnado-sweep = "bertnado.cli:run_sweep_cli"
bertnado-train = "bertnado.cli:full_train_cli"
bertnado-predict = "bertnado.cli:predict_and_evaluate_cli"
bertnado-feature = "bertnado.cli:feature_analysis_cli"

[tool.setuptools_scm]
write_to = "bertnado/_version.py"
local_scheme = "no-local-version"
tag_regex = '^(?:v\.?|V\.?)?(?P<version>\d+(?:\.\d+)*(?:(?:a|b|rc)\d+)?(?:\.post\d+)?(?:\.dev\d+)?)$'

[tool.setuptools.packages.find]
include = ["bertnado*"]

[tool.pytest.ini_options]
addopts = ["--basetemp=test_output"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/CChahrour/BertNado"
